fetch: generate VNpay and flashcard creation