@@ -21,6 +21,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.text.SimpleDateFormat;
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -157,6 +158,7 @@ public class PaymentService {
 
     /**
      * IPN Callback - Xử lý thông báo từ VNPay THEO SPECIFICATION
+     * ĐÂY LÀ METHOD QUAN TRỌNG NHẤT - Dùng để confirm thanh toán
      */
     @Transactional
     public Map<String, String> handleVNPayCallback(Map<String, String> params) {
@@ -175,7 +177,7 @@ public class PaymentService {
                 return response;
             }
 
-            // 2. Tạo params để verify - loại bỏ vnp_SecureHash và vnp_SecureHashType
+            // 2. Tạo params để verify
             Map<String, String> signParams = new HashMap<>();
             for (Map.Entry<String, String> entry : params.entrySet()) {
                 String key = entry.getKey();
@@ -186,7 +188,7 @@ public class PaymentService {
                 }
             }
 
-            // 3. Tính lại chữ ký theo specification VNPay
+            // 3. Tính lại chữ ký
             Map<String, String> hashResult = VNPayUtil.buildHashDataAndQuery(signParams);
             String hashData = hashResult.get("hashData");
             String calculatedHash = VNPayUtil.hmacSHA512(vnPayConfig.getHashSecret(), hashData);
@@ -214,7 +216,7 @@ public class PaymentService {
             log.info("TxnRef: {}, ResponseCode: {}, TransactionStatus: {}, TransactionNo: {}",
                     txnRef, responseCode, transactionStatus, transactionNo);
 
-            // 6. Tìm order bằng TxnRef (orderId)
+            // 6. Tìm order
             Long orderId;
             try {
                 orderId = Long.parseLong(txnRef);
@@ -259,48 +261,55 @@ public class PaymentService {
             txn.setMethod(bankCode);
             txn.setAmount(order.getPriceAtPurchase());
 
-            // Lưu raw payload để debug
+            // Lưu raw payload
             Map<String, Object> rawPayload = new HashMap<>();
             params.forEach((k, v) -> rawPayload.put(k, v));
             txn.setRawPayload(rawPayload);
 
-            // 10. Xử lý kết quả - ưu tiên vnp_ResponseCode theo spec VNPay
+            // 10. Xử lý kết quả
             String finalCode = responseCode != null ? responseCode : transactionStatus;
             if ("00".equals(finalCode)) {
-                // Thanh toán thành công
+                // ✅ Thanh toán thành công
                 order.setStatus(Order.OrderStatus.PAID);
                 txn.setStatus(Transaction.TransactionStatus.SUCCEEDED);
                 txn.setMessage("Thanh toán thành công");
 
-                // Cập nhật user thành premium
+                // Tính expiresAt dựa vào durationDays
+                StudyPack pack = studyPackRepository.findById(order.getPackId()).orElse(null);
+                if (pack != null) {
+                    ZonedDateTime expiresAt = order.getStartedAt().plusDays(pack.getDurationDays());
+                    order.setExpiresAt(expiresAt);
+                }
+
+                // Kích hoạt premium cho user
                 User user = userRepository.findById(order.getUserId())
                         .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
                 user.setIsPremium(true);
                 userRepository.save(user);
 
-                log.info("Payment SUCCESS for order {}", order.getId());
+                log.info("✅ Payment SUCCESS for order {}", order.getId());
             } else {
-                // Thanh toán thất bại
+                // ❌ Thanh toán thất bại
                 order.setStatus(Order.OrderStatus.CANCELED);
                 txn.setStatus(Transaction.TransactionStatus.FAILED);
                 txn.setMessage("Thanh toán thất bại: " + finalCode);
 
-                log.warn("Payment FAILED for order {} with code {}", order.getId(), finalCode);
+                log.warn("❌ Payment FAILED for order {} with code {}", order.getId(), finalCode);
             }
 
             // 11. Lưu DB
             orderRepository.save(order);
             transactionRepository.save(txn);
 
-            // 12. Trả về success cho VNPay THEO FORMAT JSON
+            // 12. Trả về success cho VNPay
             response.put("RspCode", "00");
             response.put("Message", "Confirm Success");
 
-            log.info("IPN processed successfully");
+            log.info("✅ IPN processed successfully");
             return response;
 
         } catch (Exception e) {
-            log.error("Error processing IPN", e);
+            log.error("❌ Error processing IPN", e);
             response.put("RspCode", "99");
             response.put("Message", "Unknown error: " + e.getMessage());
             return response;
@@ -308,8 +317,284 @@ public class PaymentService {
     }
 
     /**
+     * Return URL - User được redirect về đây sau khi thanh toán
+     * ✅ CẬP NHẬT: Thêm logic cập nhật Order nếu IPN callback không được gọi
+     */
+    @Transactional // ❌ ĐÃ BỎ readOnly = true
+    public Map<String, Object> handleVNPayReturn(Map<String, String> params) {
+        Map<String, Object> response = new LinkedHashMap<>();
+
+        try {
+            log.info("=== VNPAY RETURN URL (NGROK) ===");
+            log.info("Received params: {}", params);
+
+            // 1. Lấy hash từ VNPay
+            String receivedHash = params.get("vnp_SecureHash");
+            if (receivedHash == null) {
+                log.error("Missing vnp_SecureHash");
+                response.put("success", false);
+                response.put("message", "Thiếu chữ ký bảo mật");
+                response.put("code", "NO_SIGNATURE");
+                return response;
+            }
+
+            // 2. Tạo params để verify
+            Map<String, String> signParams = new HashMap<>();
+            for (Map.Entry<String, String> entry : params.entrySet()) {
+                String key = entry.getKey();
+                if (key.startsWith("vnp_")
+                        && !key.equals("vnp_SecureHash")
+                        && !key.equals("vnp_SecureHashType")) {
+                    signParams.put(key, entry.getValue());
+                }
+            }
+
+            // 3. Tính lại chữ ký
+            Map<String, String> hashResult = VNPayUtil.buildHashDataAndQuery(signParams);
+            String hashData = hashResult.get("hashData");
+            String calculatedHash = VNPayUtil.hmacSHA512(vnPayConfig.getHashSecret(), hashData);
+
+            log.info("HashData       : {}", hashData);
+            log.info("Calculated hash: {}", calculatedHash);
+            log.info("Received hash  : {}", receivedHash);
+
+            // 4. Verify signature
+            if (!receivedHash.equalsIgnoreCase(calculatedHash)) {
+                log.error("❌ Invalid signature");
+                response.put("success", false);
+                response.put("message", "Chữ ký không hợp lệ");
+                response.put("code", "INVALID_SIGNATURE");
+                return response;
+            }
+
+            log.info("✅ Signature verified");
+
+            // 5. Lấy thông tin từ params
+            String txnRef = params.get("vnp_TxnRef");
+            String responseCode = params.get("vnp_ResponseCode");
+            String transactionNo = params.get("vnp_TransactionNo");
+            String bankCode = params.get("vnp_BankCode");
+            String amountStr = params.get("vnp_Amount");
+            String payDate = params.get("vnp_PayDate");
+            String cardType = params.get("vnp_CardType");
+
+            log.info("TxnRef: {}, ResponseCode: {}, TransactionNo: {}",
+                    txnRef, responseCode, transactionNo);
+
+            // 6. Parse orderId
+            Long orderId;
+            try {
+                orderId = Long.parseLong(txnRef);
+            } catch (NumberFormatException e) {
+                log.error("Invalid txnRef format: {}", txnRef);
+                response.put("success", false);
+                response.put("message", "Mã đơn hàng không hợp lệ");
+                response.put("code", "INVALID_ORDER_ID");
+                return response;
+            }
+
+            // 7. Lấy thông tin từ DB
+            Order order = orderRepository.findById(orderId).orElse(null);
+            if (order == null) {
+                log.error("Order not found: {}", orderId);
+                response.put("success", false);
+                response.put("message", "Không tìm thấy đơn hàng");
+                response.put("code", "ORDER_NOT_FOUND");
+                return response;
+            }
+
+            List<Transaction> transactions = transactionRepository.findByOrderId(orderId);
+            Transaction transaction = transactions.isEmpty() ? new Transaction() : transactions.get(0);
+
+            StudyPack pack = studyPackRepository.findById(order.getPackId()).orElse(null);
+            if (pack == null) {
+                log.error("Pack not found: {}", order.getPackId());
+                response.put("success", false);
+                response.put("message", "Không tìm thấy gói học tập");
+                response.put("code", "PACK_NOT_FOUND");
+                return response;
+            }
+
+            // 8. Verify amount
+            long vnpAmount = Long.parseLong(amountStr);
+            long orderAmount = order.getPriceAtPurchase()
+                    .multiply(new java.math.BigDecimal("100"))
+                    .longValue();
+
+            if (vnpAmount != orderAmount) {
+                log.warn("⚠️ Amount mismatch: expected {}, got {}", orderAmount, vnpAmount);
+            }
+
+            // 9. Kiểm tra trạng thái thanh toán
+            boolean isSuccess = "00".equals(responseCode);
+
+            log.info("Payment result: {} (code: {})", isSuccess ? "SUCCESS" : "FAILED", responseCode);
+
+            // ✅ 10. CẬP NHẬT ORDER NẾU VẪN Ở TRẠNG THÁI PENDING
+            if (order.getStatus() == Order.OrderStatus.PENDING) {
+                log.info("⚠️ Order still PENDING, updating from Return URL...");
+
+                // Cập nhật Transaction
+                transaction.setOrderId(order.getId());
+                transaction.setProvider("VNPay");
+                transaction.setProviderTxnId(transactionNo);
+                transaction.setMethod(bankCode);
+                transaction.setAmount(order.getPriceAtPurchase());
+
+                // Lưu raw payload
+                Map<String, Object> rawPayload = new HashMap<>();
+                params.forEach((k, v) -> rawPayload.put(k, v));
+                transaction.setRawPayload(rawPayload);
+
+                if (isSuccess) {
+                    // ✅ Thanh toán thành công
+                    order.setStatus(Order.OrderStatus.PAID);
+                    transaction.setStatus(Transaction.TransactionStatus.SUCCEEDED);
+                    transaction.setMessage("Thanh toán thành công");
+
+                    // Tính expiresAt dựa vào durationDays
+                    ZonedDateTime expiresAt = order.getStartedAt().plusDays(pack.getDurationDays());
+                    order.setExpiresAt(expiresAt);
+
+                    // Kích hoạt premium cho user
+                    User user = userRepository.findById(order.getUserId())
+                            .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
+                    user.setIsPremium(true);
+                    userRepository.save(user);
+
+                    log.info("✅ Payment SUCCESS for order {} - Updated from Return URL", order.getId());
+                } else {
+                    // ❌ Thanh toán thất bại
+                    order.setStatus(Order.OrderStatus.CANCELED);
+                    transaction.setStatus(Transaction.TransactionStatus.FAILED);
+                    transaction.setMessage("Thanh toán thất bại: " + responseCode);
+
+                    log.warn("❌ Payment FAILED for order {} with code {} - Updated from Return URL",
+                            order.getId(), responseCode);
+                }
+
+                // Lưu DB
+                orderRepository.save(order);
+                transactionRepository.save(transaction);
+
+            } else {
+                log.info("ℹ️ Order already processed by IPN callback: {}", order.getStatus());
+            }
+
+            // 11. Build response
+            response.put("success", isSuccess);
+            response.put("responseCode", responseCode);
+            response.put("message", isSuccess ? "Thanh toán thành công" : getErrorMessage(responseCode));
+            response.put("code", isSuccess ? "SUCCESS" : "PAYMENT_FAILED");
+
+            // Thông tin đơn hàng
+            Map<String, Object> orderInfo = new LinkedHashMap<>();
+            orderInfo.put("orderId", order.getId());
+            orderInfo.put("orderStatus", order.getStatus().name());
+            orderInfo.put("packName", pack.getName());
+            orderInfo.put("packDescription", pack.getDescription());
+            orderInfo.put("amount", order.getPriceAtPurchase());
+            orderInfo.put("durationDays", pack.getDurationDays());
+            orderInfo.put("createdAt", order.getCreatedAt().toString());
+
+            if (order.getStartedAt() != null) {
+                orderInfo.put("startedAt", order.getStartedAt().toString());
+            }
+            if (order.getExpiresAt() != null) {
+                orderInfo.put("expiresAt", order.getExpiresAt().toString());
+            }
+
+            response.put("order", orderInfo);
+
+            // Thông tin giao dịch
+            Map<String, Object> txnInfo = new LinkedHashMap<>();
+            txnInfo.put("txnRef", txnRef);
+            txnInfo.put("transactionNo", transactionNo);
+            txnInfo.put("bankCode", bankCode);
+            txnInfo.put("cardType", cardType);
+            txnInfo.put("payDate", payDate);
+            txnInfo.put("payDateFormatted", formatPayDate(payDate));
+            txnInfo.put("amount", vnpAmount / 100);
+
+            if (transaction != null && transaction.getId() != null) {
+                txnInfo.put("transactionId", transaction.getId());
+                txnInfo.put("transactionStatus", transaction.getStatus().name());
+                txnInfo.put("provider", transaction.getProvider());
+            }
+
+            response.put("transaction", txnInfo);
+
+            // Thông tin user
+            User user = userRepository.findById(order.getUserId()).orElse(null);
+            if (user != null) {
+                Map<String, Object> userInfo = new LinkedHashMap<>();
+                userInfo.put("userId", user.getId());
+                userInfo.put("email", user.getEmail());
+                userInfo.put("fullName", user.getFullName());
+                userInfo.put("isPremium", user.getIsPremium());
+                userInfo.put("isBlocked", user.getIsBlocked());
+                response.put("user", userInfo);
+            }
+
+            log.info("✅ Return URL processed successfully");
+            return response;
+
+        } catch (Exception e) {
+            log.error("❌ Error processing return URL", e);
+            response.put("success", false);
+            response.put("message", "Lỗi xử lý kết quả thanh toán: " + e.getMessage());
+            response.put("code", "INTERNAL_ERROR");
+            return response;
+        }
+    }
+    /**
+     * Format pay date từ yyyyMMddHHmmss sang dd/MM/yyyy HH:mm:ss
+     */
+    private String formatPayDate(String payDate) {
+        if (payDate == null || payDate.length() != 14) {
+            return payDate;
+        }
+
+        try {
+            String year = payDate.substring(0, 4);
+            String month = payDate.substring(4, 6);
+            String day = payDate.substring(6, 8);
+            String hour = payDate.substring(8, 10);
+            String minute = payDate.substring(10, 12);
+            String second = payDate.substring(12, 14);
+
+            return String.format("%s/%s/%s %s:%s:%s", day, month, year, hour, minute, second);
+        } catch (Exception e) {
+            return payDate;
+        }
+    }
+
+    /**
+     * Map response code từ VNPay sang message tiếng Việt
+     */
+    private String getErrorMessage(String responseCode) {
+        Map<String, String> errorMessages = new HashMap<>();
+        errorMessages.put("00", "Giao dịch thành công");
+        errorMessages.put("07", "Trừ tiền thành công. Giao dịch bị nghi ngờ (liên quan tới lừa đảo, giao dịch bất thường)");
+        errorMessages.put("09", "Giao dịch không thành công do: Thẻ/Tài khoản của khách hàng chưa đăng ký dịch vụ InternetBanking tại ngân hàng");
+        errorMessages.put("10", "Giao dịch không thành công do: Khách hàng xác thực thông tin thẻ/tài khoản không đúng quá 3 lần");
+        errorMessages.put("11", "Giao dịch không thành công do: Đã hết hạn chờ thanh toán. Xin quý khách vui lòng thực hiện lại giao dịch");
+        errorMessages.put("12", "Giao dịch không thành công do: Thẻ/Tài khoản của khách hàng bị khóa");
+        errorMessages.put("13", "Giao dịch không thành công do Quý khách nhập sai mật khẩu xác thực giao dịch (OTP)");
+        errorMessages.put("24", "Giao dịch không thành công do: Khách hàng hủy giao dịch");
+        errorMessages.put("51", "Giao dịch không thành công do: Tài khoản của quý khách không đủ số dư để thực hiện giao dịch");
+        errorMessages.put("65", "Giao dịch không thành công do: Tài khoản của Quý khách đã vượt quá hạn mức giao dịch trong ngày");
+        errorMessages.put("75", "Ngân hàng thanh toán đang bảo trì");
+        errorMessages.put("79", "Giao dịch không thành công do: KH nhập sai mật khẩu thanh toán quá số lần quy định");
+        errorMessages.put("99", "Các lỗi khác (Lỗi không xác định)");
+
+        return errorMessages.getOrDefault(responseCode, "Lỗi không xác định (Code: " + responseCode + ")");
+    }
+
+    /**
      * Lấy danh sách order của user hiện tại
      */
+
     public List<OrderDTO> getMyOrders() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
         String email = auth.getName();
@@ -317,7 +602,17 @@ public class PaymentService {
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
 
         List<Order> orders = orderRepository.findByUserIdOrderByCreatedAtDesc(user.getId());
-        return orders.stream().map(OrderDTO::fromEntity).toList();
+
+        // ✅ Convert và thêm packName
+        return orders.stream().map(order -> {
+            OrderDTO dto = OrderDTO.fromEntity(order);
+
+            // Lấy thông tin pack để gán packName
+            studyPackRepository.findById(order.getPackId())
+                    .ifPresent(pack -> dto.setPackName(pack.getName()));
+
+            return dto;
+        }).collect(Collectors.toList());
     }
 
     /**
@@ -327,7 +622,7 @@ public class PaymentService {
         if (text == null) return "";
         String normalized = java.text.Normalizer.normalize(text, java.text.Normalizer.Form.NFD);
         return normalized.replaceAll("[\\p{InCombiningDiacriticalMarks}]", "")
-                .replaceAll("[^a-zA-Z0-9\\s]", "") // Chỉ giữ chữ, số và dấu cách
+                .replaceAll("[^a-zA-Z0-9\\s]", "")
                 .trim();
     }
 }
